--- a/templates/partials/javascripts.html.twig
+++ b/templates/partials/javascripts.html.twig
@@ -1,9 +1,9 @@
 {% do assets.addJs('jquery', 100) %}
 {% do assets.addJs('theme://js/debug.js', { group:'bottom' }) %}
 {% do assets.addJs('theme://js/announcement.js', { group:'bottom' }) %}
-{% do assets.addJs('theme://js/header.js', { group:'bottom' }) %}
+{# {% do assets.addJs('theme://js/header.js', { group:'bottom' }) %} #}
 {% do assets.addJs('theme://js/link.js', { group:'bottom'}) %}
 {% do assets.addJs('theme://js/youtube.js', { group:'bottom' }) %}
-{% do assets.addJs('theme://js/reveal.js', { group:'bottom' }) %}
-{% do assets.addJs('theme://js/loading.js', { group:'bottom', priority: 0 }) %}
+{# {% do assets.addJs('theme://js/reveal.js', { group:'bottom' }) %} #}
+{# {% do assets.addJs('theme://js/loading.js', { group:'bottom', priority: 0 }) %} #}
 {% do assets.addJs('theme://js/custom.js', { group:'bottom' }) %}
