--- a/templates/recipe.html.twig
+++ b/templates/recipe.html.twig
@@ -1,42 +1,64 @@
 {% extends 'partials/base.html.twig' %}
 
 {% block content %}
+<main>
+	<h1 class="recipe__title">{{ page.title }}</h1>
+	<h2 class="recipe__description">{{ page.header.description }}</h2>
+	<div class="recipe__media">{{ page.media.images|first().html }}</div>
 
-	<main>
-		<h1 class="recipe__title">{{ page.title }}</h1>
-		<h2 class="recipe__description">{{ page.header.description }}</h2>
-		<div class="recipe__media">{{ page.media.images|first().html }}</div>
+	<svg class="recipe__marker" width="11" height="13" viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+		<path d="M11 6.5L-0.250001 12.9952L-0.25 0.00480889L11 6.5Z" fill="#FF0000"></path>
+	</svg>
 
-		<div class="recipe__wrapper">
+	<div class="recipe__time">
+		<h2>Time</h2>
+		<li>Prep: {{ page.header.preptime }} min</li>
+		<li>Cook: {{ page.header.cooktime }} min</li>
+		<li>Total: {{ page.header.totaltime }} min</li>
+	</div>
 
-			<svg class="recipe__marker" width="11" height="13" viewBox="0 0 11 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-				<path d="M11 6.5L-0.250001 12.9952L-0.25 0.00480889L11 6.5Z" fill="#FF0000"/>
-			</svg>
+	<div class="recipe__ingredients">
+		<h2>Ingredients</h2>
+		{% for ingredient in page.header.ingredients %}
+		<li>{{ ingredient.text }}</li>
+		{% endfor %}
+	</div>
+	
+	<div class="recipe__instructions">
+		<h2>Instructions</h2>
+		{% for step in page.header.steps %}
+		<h3>{{ step.title }}</h3>
+		{{ step.content|markdown }}
+		{% endfor %}
+	</div>
+</main>
 
-			<div class="recipe__time">
-				<h2>Time</h2>
-				<li>Prep: {{ page.header.preptime }} min</li>
-				<li>Cook: {{ page.header.cooktime }} min</li>
-				<li>Total: {{ page.header.totaltime }} min</li>
-			</div>
 
-			<div class="recipe__ingredients">
-				<h2>Ingredients</h2>
-				{% for ingredient in page.header.ingredients %}
-				<li>{{ ingredient.text }}</li>
-				{% endfor %}
-			</div>
-			
-			<div class="recipe__instructions">
-				<h2>Instructions</h2>
-				{% for step in page.header.steps %}
-				<h3>{{ step.title }}</h3>
-				{{ step.content|markdown }}
-				{% endfor %}
 
-			</div>
+
+	<section class="recipe__related">
+
+		<h2>Recently added recipes</h2>
+
+		{% set options = { items: {'@page':'/recipes'}, 'order': {'by': 'date', 'dir': 'desc'}} %}
+		{% set recipes = page.collection(options) %}
+
+		<div class="recipe-grid">
+		{% for recipe in recipes %}
+			<article class="recipe-card">
+				<a href="{{ recipe.url }}">
+					<div class="recipe-card__text-ctn">
+						<div class="recipe-card__title">{{ recipe.title }}</div>
+						<div class="recipe-card__description">{{ recipe.header.description }}</div>
+					</div>
+					<div class="recipe-card__thumb">{{ recipe.media.images|first().html }}</div>
+				</a>
+			</article>
+		{% endfor %}
 		</div>
-	</main>
+
+	</section>
+
 {% endblock %}
 
 
