--- a/css/recipe.css
+++ b/css/recipe.css
@@ -1,8 +1,3 @@
-.recipe__wrapper {
-	display: flex;
-}
-
-
 
 /*RECIPE*/
 
@@ -10,8 +5,6 @@
 	max-width: var(--width-tight);
 	width: 100%;
 	margin: 0 auto;
-	padding: 0 0 var(--rhythm) 0;
-    border-bottom: 1px solid black;
 }
 
 .recipe__title {
@@ -19,26 +12,44 @@
 	font-weight: 900;
 	font-size: 48px;
 	line-height: 1.2;
-	margin: 40px 0;
+	margin: 40px 0 0 0;
 	padding: 0 20px;
 }
 
 .recipe__description {
 	font-family: var(--font-alt);
 	font-size: 16px;
-	margin: 40px 0;
+	margin: 20px 0 0 0;
 	padding: 0 20px;
 }
 
 .recipe__media {
-	margin: 40px 0 0 0;
+	margin: 40px 0;
 }
 
 .recipe__media img {
 	width: 100%;
 }
 
-.recipe__ingredients h2{
+.recipe__marker {
+	position: sticky;
+	top: 30%;
+	padding-top: 20px;
+	margin-left: -20px;
+
+}
+
+.recipe__time {
+	font-family: var(--font-base);
+	font-size: 14px;
+	font-weight: 700;
+	list-style: none;
+	line-height: 1.6;
+	margin: 40px 0;
+	padding: 0 20px;
+}
+
+.recipe__time h2{
 	font-size: 16px;
 	font-weight: 400;
 	margin-top: 40px;
@@ -51,38 +62,32 @@
 	font-weight: 700;
 	list-style: none;
 	line-height: 1.6;
-	padding: 0 20px;
+	margin: 40px 0;
+	padding: 20px 20px 0 20px;
+	border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-
-.recipe__marker {
-	position: sticky;
-	top: 30%;
-	padding-top: 40px;
-}
-
-.recipe__time h2{
+.recipe__ingredients h2{
 	font-size: 16px;
 	font-weight: 400;
+	margin-top: -23px;
 	margin-bottom: 20px;
 }
 
-.recipe__time {
+.recipe__instructions {
 	font-family: var(--font-base);
 	font-size: 14px;
-	font-weight: 700;
 	list-style: none;
 	line-height: 1.6;
-	padding: 0 20px;
-	position: relative;
-	margin-top: -16px;
-
+	margin: 40px 0 0 0;
+	padding: 20px 20px 0 20px;
+	border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .recipe__instructions h2{
 	font-size: 16px;
 	font-weight: 400;
-	margin-top: 40px;
+	margin-top: -23px;
 	margin-bottom: 20px;
 }
 
@@ -93,54 +98,40 @@
 	margin-top: 20px;
 }
 
-.recipe__instructions {
-	font-family: var(--font-base);
-	font-size: 14px;
-	list-style: none;
-	line-height: 1.6;
-	padding: 0 20px;
-}
-
 .recipe__instructions p {
 	font-family: var(--font-base);
 	font-size: 14px;
 	margin-top: 10px;
 }
 
-
-
-
-
-
-
-
-
-
-/*ADS*/
-
-/*.ad__skyscraper {
-	display: none;
-	position: sticky;
-	width: 300px;
-	height: 600px;
-	background-color: red;
-	margin: 0 auto 0 0;
-	top: 0;
+.recipe__end {
+	margin: 100px 0 100px 0;
+	text-align: center;
 }
 
-@media (min-width: 1240px) {
-	.ad__skyscraper {
-		display: block;
-	}	
-}*/
+@media (min-width: 735px) {
 
+	/*remove hor padding*/
+	.recipe__title,
+	.recipe__description,
+	.recipe__media,
+	.recipe__time,
+	.recipe__ingredients,
+	.recipe__instructions {
+		padding: 0 0;
+	}
 
+	/*hide marker*/
+	.recipe__marker {
+		display: none;
+	}
 
+	.recipe__ingredients h2,
+	.recipe__instructions h2 {
+		margin-top: 40px;
+	}
 
-
-
-
-
+}
 
 
 
@@ -148,58 +139,64 @@
 
 /*RELATED*/
 
-
 .recipe__related {
-	max-width: var(--width-body);
+	max-width: var(--width-tight);
 	width: 100%;
-	margin: var(--rhythm) auto 0 auto;
+	margin: 0 auto 0 auto;
+	padding: 0 20px;
+	border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .recipe__related h2 {
 	font-family: var(--font-base);
 	font-weight: 900;
-	font-size: 48px;
+	font-size: 36px;
 	line-height: 1.2;
 	margin: 40px 0;
-	padding: 0 20px;
 }
-
-
-
-
 
 .recipe-grid {
 	width: 100%;
-	max-width: var(--width-body);
 	overflow: hidden;
 	display: grid;
 	grid-template-columns: 1fr; 
 	grid-gap: 10px;
-	padding: 0 20px;
 	margin: 0 auto;
 }
 
-.recipe-card a {
-	display: flex;
-
+@media (min-width: 735px) {
+	.recipe__related {
+		padding: 0 0;
+	}
 }
 
-.recipe-card__text-ctn {
+
+
+
+
+
+/*CARD*/
+
+.recipe-card a {
+	display: flex;
+	justify-content: space-between;
 
 }
 
 .recipe-card__title {
 	font-family: var(--font-base);
 	font-weight: 900;
-	font-size: 24px;
+	font-size: 16px;
 	line-height: 1.2;
+	text-decoration: underline;
 }
 
 .recipe-card__description {
-	font-family: var(--font-alt);
-	font-size: 16px;
+	/*font-family: var(--font-alt);*/
+	font-size: 14px;
+	line-height: 1.3;
 	margin-top: 10px;
-	padding-right: 10px;
+	padding-right: 20%;
 }
 
 .recipe-card__thumb {
@@ -213,4 +210,25 @@
 	height: 100%;
 	object-fit: cover;
 	object-position: center;
+}
+
+
+/*BIG CARD MODIFIER*/
+
+.recipe-card--big {
+	margin-bottom: 40px;
+}
+
+.recipe-card--big a {
+	flex-direction: column-reverse;
+}
+
+.recipe-card--big .recipe-card__thumb {
+	width: 100%;
+	height: 100%;
+	flex-shrink: 0;
+}
+
+.recipe-card--big .recipe-card__title {
+	margin-top: 10px;
 }
