--- a/css/theme.css
+++ b/css/theme.css
@@ -200,3 +200,25 @@ ul {
     display: none;
   }
 }
+
+
+
+
+
+/* ADS ================================================================ */
+
+.ad {
+  position: relative;
+  background-color: #f1f1f1;
+  width: 100%;
+  margin: 0 auto 0 auto;
+}
+
+.ad--recipe-header {
+  max-width: var(--width-site);
+}
+
+.ad--recipe-end {
+  max-width: var(--width-tight);
+  margin-bottom: 40px;
+}
