--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -26,7 +26,7 @@
     {{ assets.js()|raw }}
 {% endblock %}
 {% block gtm_head %}{% include 'partials/gtm-head.html.twig' %}{% endblock %}
-
+<script data-ad-client="ca-pub-8079759965001997" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body class="{{ page.template }} {{ page.header.body_classes }} loading">
@@ -38,7 +38,6 @@
 {% block announcements %}{% include 'partials/announcement.html.twig' %}{% endblock %}
 {% block bottom %}{{ assets.js('bottom')|raw }}{% endblock %}
 {% block gtm_body %}{% include 'partials/gtm-body.html.twig' %}{% endblock %}
-{# <script data-ad-client="ca-pub-8079759965001997" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> #}
 </body>
 
 </html>
