--- a/templates/partials/stylesheets.html.twig
+++ b/templates/partials/stylesheets.html.twig
@@ -1,6 +1,6 @@
 <link rel="preload" href="https://fonts.googleapis.com/icon?family=Material+Icons" as="style">
-<link rel="preload" href="{{ url('theme://fonts/Roboto/Roboto-Regular.ttf', true) }}" as="font">
-<link rel="preload" href="{{ url('theme://fonts/LexendDeca/LexendDeca-Regular.ttf', true) }}" as="font">
+<link rel="preload" href="{{ url('theme://fonts/inter-v1-latin-900.woff2', true) }}" as="font">
+<link rel="preload" href="{{ url('theme://fonts/inter-v1-latin-regular.woff2', true) }}" as="font">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 {# {% do assets.addCss('theme://css/loading.css', { loading : 'inline' }) %} #}
